--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,12 @@
 #
 .DS_Store
 
+# Allure and Playwright reports
+allure-report/
+allure-results/
+test-results/
+playwright-report/
+
 # Xcode
 #
 build/
