--- a/.github/workflows/test-playwright.yml
+++ b/.github/workflows/test-playwright.yml
@@ -1,7 +1,7 @@
 name: Playwright Tests
 on:
   push:
-    branches: [ search-and-post-tests ]
+    branches: [ main ]
   
 jobs:
   test:
@@ -19,8 +19,8 @@ jobs:
     - name: Run Playwright tests
       run: yarn playwright test
       env:
-          BS_EMAIL: ${{ secrets.BS_EMAIL}}
-          BS_PASSWORD: ${{ secrets.BS_PASSWORD}}
+          SECRET_EMAIL: ${{ secrets.BS_EMAIL}}
+          SECRET_PWD: ${{ secrets.BS_PASSWORD}}
     - uses: actions/upload-artifact@v4
       if: ${{ !cancelled() }}
       with:
