--- a/.github/workflows/test-playwright.yml
+++ b/.github/workflows/test-playwright.yml
@@ -19,7 +19,7 @@ jobs:
     - name: Run Playwright tests
       run: yarn playwright test
       env:
-          SECRET_EMAIL: ${{ secrets.BS_EMAIL}}
+          SECRET_USR: ${{ secrets.BS_USERNAME}}
           SECRET_PWD: ${{ secrets.BS_PASSWORD}}
     - uses: actions/upload-artifact@v4
       if: ${{ !cancelled() }}
